fixed viewports and broken agb privacy pages on mobile

--- a/ui2022/src/app/pages/privacy-page/privacy-page.component.scss
+++ b/ui2022/src/app/pages/privacy-page/privacy-page.component.scss
@@ -3,6 +3,7 @@
 }
 
 .privacy {
+  width: 100%;
   margin-top: 2rem;
   max-width: 1080px;
 }
