--- a/ui2022/src/app/pages/terms-page/terms-page.component.scss
+++ b/ui2022/src/app/pages/terms-page/terms-page.component.scss
@@ -1,3 +1,9 @@
+.is-flex {
+  width: 100%;
+}
+
 .terms {
+  width: 100%;
+  margin-top: 2rem;
   max-width: 1080px;
 }
